log/build_2026-01-01_22-12-28/vision/stderr.log
  File "/home/mgazzola/ros2_spirob_ws/install/vision/lib/python3.12/site-packages/vision/record_video_node.py", line 1
    !/usr/bin/env python3
    ^
SyntaxError: invalid syntax

